# walue_whatsapp_client

./: README.md  pyproject.toml  requirements.txt  setup.py
walue_whatsapp_client/: constants.py  hooks.py  install.py  modules.txt  patches.txt  tasks.py
walue_whatsapp_client/api/: __init__.py  auth.py  calls.py  messages.py  setup.py  webhooks.py
walue_whatsapp_client/config/: desktop.py
walue_whatsapp_client/doctype/: __init__.py
walue_whatsapp_client/doctype/whatsapp_call_log/: whatsapp_call_log.py
walue_whatsapp_client/doctype/whatsapp_call_permission/: __init__.py
walue_whatsapp_client/doctype/whatsapp_message_log/: __init__.py
walue_whatsapp_client/doctype/whatsapp_settings/: __init__.py  whatsapp_settings.py
walue_whatsapp_client/doctype/whatsapp_template/: whatsapp_template.json  whatsapp_template.py
walue_whatsapp_client/public/css/: whatsapp_client.css
walue_whatsapp_client/public/js/: crm_lead.js  whatsapp_client.js
walue_whatsapp_client/walue_whatsapp_client/doctype/whatsapp_call_log/: __init__.py  whatsapp_call_log.json
walue_whatsapp_client/walue_whatsapp_client/doctype/whatsapp_call_permission/: whatsapp_call_permission.json  whatsapp_call_permission.py
walue_whatsapp_client/walue_whatsapp_client/doctype/whatsapp_message_log/: whatsapp_message_log.json  whatsapp_message_log.py
walue_whatsapp_client/walue_whatsapp_client/doctype/whatsapp_settings/: whatsapp_settings.json
walue_whatsapp_client/walue_whatsapp_client/doctype/whatsapp_template/: __init__.py
